<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory="200"
        android:title=""
        app:showAsAction="ifRoom" />
</menu>