<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/ivRemoveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:src="@android:drawable/ic_delete" />

</RelativeLayout>